--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#E91E63</color>
-    <color name="purple_500">#F44336</color>
-    <color name="purple_700">#03A9F4</color>
-    <color name="teal_200">#4CAF50</color>
-    <color name="teal_700">#009688</color>
+    <color name="my_primary">#DD1C0D</color>
+    <color name="my_secondary">#C972D8</color>
+    <color name="my_statusbar">#4CAF50</color>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="my_text">#009688</color>
+
+    <color name="my_text">#8A0E9F</color>
 </resources>
