--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,15 +2,14 @@
     <!-- Base application theme. -->
     <style name="Theme.KameliasAndroidLabs" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">#E91E63</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimary">@color/my_primary</item>
+
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">#8BC34A</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/my_secondary</item>
+
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#03A9F4</item>
+        <item name="android:statusBarColor">@color/my_statusbar</item>
+
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/my_text</item>
     </style>
