--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,5 +13,8 @@
         <item name="android:statusBarColor" tools:targetApi="l">#03A9F4</item>
         <!-- Customize your theme here. -->
         <item name="android:textColor">@color/my_text</item>
+
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 </resources>
